--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<div class="content">
 										<h2 class="major">Education</h2>
 										<p>2022 - Now  PhD in Automation, University of Science and Technology Beijing</p>
-                                        <p>2017 - 2020 MSc in Automation Science and Electrical Engineering, Heihang University</p>	
+                                        <p>2017 - 2020 MSc in Automation Science and Electrical Engineering, Beihang University</p>	
                                         <p>2013 - 2017 BEng in Automation, University of Science and Technology Beijing</p>										
 									</div>
 								</div>
@@ -80,7 +80,6 @@
 									02150 Espoo<br />
 								</li>
 								<li class="fa-envelope"><a href="#">yuying.1.zhang@aalto.fi</a></li>
-								<li class="fa-weixin"><a href="#">zyy943424071</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy;Carol Zhang</li>
