--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Education</h2>
-										<p>2022 - Now  PhD in Automation, University of Science and Technology Beijing</p>
+										<p>2022 - Now  PhD in Automation, Aalto University</p>
                                         <p>2017 - 2020 MSc in Automation Science and Electrical Engineering, Beihang University</p>	
                                         <p>2013 - 2017 BEng in Automation, University of Science and Technology Beijing</p>										
 									</div>
